--- a/kam/style.css
+++ b/kam/style.css
@@ -141,6 +141,15 @@ body {
     .wch {
         height: 190px;
         text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-pack: distribute;
+        justify-content: space-around;
     }
 
     .wch .title {
@@ -148,10 +157,6 @@ body {
         font-weight: 500;
         font-size: 24px;
         margin: 0;
-    }
-
-    .wch p {
-        padding: 15px 30px;
     }
 
     .info-img1,
@@ -198,6 +203,8 @@ body {
     }
     .info p.title{
         font-size: 18px;
+        text-align: center;
+        margin: 0;
     }
     iframe{
         width: 100%;
